[gd_scene load_steps=16 format=3 uid="uid://dilpsqk386pp1"]

[ext_resource type="Texture2D" uid="uid://cmi0xs6v0jdik" path="res://UI/teacher/icons/Search.svg" id="1_iau0k"]
[ext_resource type="Script" path="res://UI/user/UserProjectManager.gd" id="1_l3bed"]
[ext_resource type="Texture2D" uid="uid://cux41gjvwr6tt" path="res://UI/teacher/icons/2.png" id="2_8non7"]
[ext_resource type="Texture2D" uid="uid://du8kpqgdas2fq" path="res://UI/teacher/icons/Control.svg" id="2_fnb40"]
[ext_resource type="Texture2D" uid="uid://du35uc6lv57jh" path="res://UI/projectmanager/icons/Reload.svg" id="3_jogwd"]
[ext_resource type="Texture2D" uid="uid://bdr6bh0qa6rt2" path="res://UI/teacher/icons/1.png" id="3_ubeco"]
[ext_resource type="Texture2D" uid="uid://roywwwfy2qe5" path="res://UI/teacher/icons/3.png" id="4_pws7w"]
[ext_resource type="Script" path="res://UI/user/UserProjectList.gd" id="4_q135h"]
[ext_resource type="Texture2D" uid="uid://r62emunc0cyi" path="res://UI/teacher/icons/FileList.svg" id="5_ohf6w"]
[ext_resource type="Texture2D" uid="uid://bv1l8xjqcu3ur" path="res://UI/teacher/icons/Node3D.svg" id="6_gtv1i"]
[ext_resource type="Texture2D" uid="uid://1xu1kma8n0st" path="res://UI/teacher/icons/MainPlay.svg" id="6_n2jha"]
[ext_resource type="Texture2D" uid="uid://bqamfeqy1a1yp" path="res://UI/teacher/icons/File.svg" id="7_2wg28"]

[sub_resource type="LabelSettings" id="LabelSettings_ar3v7"]
font_color = Color(0.486275, 0.486275, 0.486275, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_eyjxp"]
font_color = Color(0.486275, 0.486275, 0.486275, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_mckgo"]
font_color = Color(0.486275, 0.486275, 0.486275, 1)
shadow_size = 0

[node name="UserUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3bed")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ListBox" type="VSplitContainer" parent="Panel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="SearchBox" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Panel/HSplitContainer/ListBox/SearchBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "查找"
right_icon = ExtResource("1_iau0k")

[node name="flush" type="Button" parent="Panel/HSplitContainer/ListBox/SearchBox"]
layout_mode = 2
icon = ExtResource("3_jogwd")

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/HSplitContainer/ListBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "已学习"
icon = ExtResource("2_fnb40")

[node name="Learned" type="ScrollContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_q135h")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_8non7")
expand_mode = 2
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "A型无人机装配"

[node name="VSeparator" type="VSeparator" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "创建时间:"

[node name="Label4" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer/GridContainer"]
layout_mode = 2
text = "2023-6-28"

[node name="Label2" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "创建人:"

[node name="Label5" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer/GridContainer"]
layout_mode = 2
text = "tzy"

[node name="Button" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="begin" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer/Button"]
layout_mode = 2
text = "开始学习"
icon = ExtResource("6_n2jha")

[node name="evaluate" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer/Button"]
layout_mode = 2
text = "查看评估"
icon = ExtResource("7_2wg28")

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("3_ubeco")
expand_mode = 2
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "B型无人机装配"

[node name="VSeparator" type="VSeparator" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3/GridContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "创建时间:"

[node name="Label4" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3/GridContainer"]
layout_mode = 2
text = "2023-6-28"

[node name="Label2" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3/GridContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "创建人:"

[node name="Label5" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3/GridContainer"]
layout_mode = 2
text = "tzy"

[node name="Button" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="begin" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3/Button"]
layout_mode = 2
text = "开始学习"
icon = ExtResource("6_n2jha")

[node name="evaluate" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/Learned/List/HBoxContainer3/Button"]
layout_mode = 2
text = "查看评估"
icon = ExtResource("7_2wg28")

[node name="Button2" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "未学习"
icon = ExtResource("6_gtv1i")

[node name="unLearned" type="ScrollContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_q135h")

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("4_pws7w")
expand_mode = 2
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "C型无人机装配"

[node name="VSeparator" type="VSeparator" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4/GridContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "创建时间:"

[node name="Label4" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4/GridContainer"]
layout_mode = 2
text = "2023-6-28"

[node name="Label2" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4/GridContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "创建人:"

[node name="Label5" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4/GridContainer"]
layout_mode = 2
text = "tzy"

[node name="Button" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4"]
layout_mode = 2
alignment = 1

[node name="begin" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4/Button"]
layout_mode = 2
text = "开始学习"
icon = ExtResource("6_n2jha")

[node name="evaluate" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/VBoxContainer/unLearned/List/HBoxContainer4/Button"]
layout_mode = 2
text = "查看评估"
icon = ExtResource("7_2wg28")

[node name="Panel" type="Panel" parent="Panel/HSplitContainer/ListBox/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="projectInfo" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="info" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2
text = "项目信息"
icon = ExtResource("5_ohf6w")

[node name="projectBox" type="VBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2

[node name="projectName" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox/projectName"]
layout_mode = 2
size_flags_horizontal = 3
text = "项目名称"
label_settings = SubResource("LabelSettings_ar3v7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox/projectName"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="projectInfo" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox/projectInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "项目描述"
label_settings = SubResource("LabelSettings_ar3v7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="info" type="TextEdit" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox/projectInfo"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="projectUrl" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox/projectUrl"]
layout_mode = 2
size_flags_horizontal = 3
text = "项目路径"
label_settings = SubResource("LabelSettings_eyjxp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="url" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/projectBox/projectUrl"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="belongSubject" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2
text = "所属科目"
icon = ExtResource("5_ohf6w")

[node name="belongs" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/belongs"]
layout_mode = 2
size_flags_horizontal = 3
text = "科目名称"
label_settings = SubResource("LabelSettings_mckgo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/belongs"]
layout_mode = 2
size_flags_horizontal = 3

[node name="learn" type="Button" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2
text = "项目学习"
icon = ExtResource("5_ohf6w")

[node name="learnProgress" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/learnProgress"]
layout_mode = 2
size_flags_horizontal = 3
text = "学习进度"
label_settings = SubResource("LabelSettings_ar3v7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="progress" type="ProgressBar" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/learnProgress"]
layout_mode = 2
size_flags_horizontal = 3
value = 10.0

[node name="evaluateBox" type="HBoxContainer" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/evaluateBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "成绩评估"
label_settings = SubResource("LabelSettings_ar3v7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="level" type="Label" parent="Panel/HSplitContainer/ListBox/HSplitContainer/Panel/ScrollContainer/projectInfo/evaluateBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="Panel/HSplitContainer/ListBox/SearchBox/LineEdit" to="." method="_on_search_item"]
